# howzero_threads

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  design-commands.md  extract_emails.py  insight.md  paperclip-howzero-export.json  pyproject.toml  war-room.md
.claude/: settings.local.json
.obsidian/: workspace.json
brands/: INDEX.md
brands/braveyong/: INDEX.md  braveyong_persona.md
brands/etc/: INDEX.md
brands/howzero/: INDEX.md  howzero_misc_cta-templates.md  howzero_misc_email-minicourse-3day.md  howzero_misc_story-carousel.html
brands/mkt/: INDEX.md
brands/zipsaja/: INDEX.md  zipsaja_comments_general.xlsx
chrome_profile_notebooklm/: Local State
chrome_profile_notebooklm/Default/: BrowsingTopicsState  Cookies  DIPS  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data  passkey_enclave_state
chrome_profile_notebooklm/GrShaderCache/: data_1  index
chrome_profile_notebooklm/GraphiteDawnCache/: data_0  data_1  data_2  index
chrome_profile_notebooklm/Safe Browsing/: ChromeExtMalware.store  ChromeExtMalware.store.32_13419412763922037  UrlBilling.store  UrlMalBin.store  (+17 more)
docs/: CHANGELOG.md  MARKETING-MASTER-STRATEGY.md  brand-messaging-creative-assets.md  howzero-product-lineup-market-research.md  nstructure.md  persona-howzero-identity.md  persona-howzero.md  phase0-survey-and-outreach.md  social-media-positioning.md
howzero-web/: docker-compose.yml  package-lock.json  package.json
infra/: SECURITY-CHECKLIST.md
scripts/: fetch_comments.py  post.py  run_scheduler.py
tests/: test_client.py  test_comments.py  test_content_repurposing.py  test_exceptions.py  test_rate_limiter.py  test_state.py  test_zernio_publish.py  test_zipsaja_remotion_skill_dag.py
(+9567 files in other folders)
