[project]
name = "howzero-threads"
version = "0.1.0"
description = "Threads API 자동화 - 댓글 수집, 자동 포스팅, 이메일 발송"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
    "responses>=0.23.0",
    "pre-commit>=3.0",
]
yt = [
    "youtube-transcript-api>=1.2.4",
    "scenedetect[opencv]>=0.6.4",
]
nano = [
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]
viewtrap = [
    "playwright>=1.52.0",
]
zipsaja-prices = [
    "psycopg2-binary>=2.9",
    "sshtunnel>=0.4.0",
]
content = [
    "jinja2>=3.1",
    "openpyxl>=3.1",
    "weasyprint>=62.0",
    "anthropic>=0.69",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
